# python-opsi-legacy

./: .gitignore  .gitlab-ci.yml  opsi-dev-tool.yml  pyproject.toml
OPSI/: Application.py  Config.py  Exceptions.py  Logger.py  Object.py  SharedAlgorithm.py  Types.py  UI.py  setup.py
OPSI/Backend/: Backend.py  BackendManager.py  DHCPD.py  Depotserver.py  File.py  HostControl.py  HostControlSafe.py  JSONRPC.py  MySQL.py  OpsiPXEConfd.py  Replicator.py  SQL.py  SQLite.py  __init__.py
OPSI/Service/: JsonRpc.py  (+4 more)
tests/: conftest.py  helpers.py  test_acl.py  test_application.py  test_backend_backend.py  test_backend_backenddispatcher.py  test_backend_backendmanager.py  test_backend_configdatabackend.py  test_backend_extend_d_10_opsi.py  test_backend_extend_d_10_wim.py  test_backend_extend_d_20_easy.py  test_backend_extend_d_20_legacy.py  test_backend_extend_d_30_kiosk.py  test_backend_extend_d_30_sshcommands.py  test_backend_extend_d_40_admin_tasks.py  test_backend_extend_d_40_group_actions.py  test_backend_extend_d_70_dynamic_depot.py  test_backend_extend_d_70_wan.py  test_backend_extendedconfigdatabackend.py  test_backend_hostcontrol.py  test_backend_jsonrpc.py  test_backend_opsipxeconfd.py  test_backend_replicator.py  test_backend_sql.py  test_config.py  test_configs.py  test_groups.py  test_hosts.py  test_license_management.py  test_logger.py  test_products.py  test_service_jsonrpc.py  test_service_session.py  test_service_worker.py  test_sharedalgorithm.py  test_software_and_hardware_audit.py  test_system.py  test_system_posix.py  test_util.py  test_util_file.py  (+21 more)
(+55 files in other folders)
