[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "python-opsi"
version = "4.3.7.0"
description = "The opsi python library"
homepage = "https://www.opsi.org"
license = "AGPL-3.0"
maintainers = ["uib GmbH <info@uib.de>"]
authors = ["uib GmbH <info@uib.de>"]
include = ["python-opsi_data/**/*"]
[[tool.poetry.packages]]
include = "OPSI"

[[tool.poetry.source]]
name = "uibpypi"
url = "https://pypi.uib.gmbh/simple"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
attrs = ">=24.2"
colorlog = ">=6.6"
ldap3 = ">=2.9"
lz4 = ">=4.0"
msgpack = ">=1.0"
packaging = ">=24.1"
pefile = ">=2024.8"
pexpect = ">=4.8"
psutil = ">=6.0"
pyasn1 = ">=0.6"
pycryptodome = ">=3.10"
python-opsi-common = ">=4.3,<4.4"
python-pam = ">=2.0"
pyzsync = ">=1.2"
ruyaml = ">=0.91"
service-identity = ">=24.1"
six = ">=1.16"
sqlalchemy = ">=1.4,<2.0"
tomlkit = ">=0.13"
typing-extensions = ">=4.12"

[tool.ruff.format]
indent-style = "tab"

[tool.ruff.lint]
ignore = ["F405"]

[tool.poetry.dependencies.distro]
platform = "linux"
version = ">=1.5"

[tool.poetry.dependencies.pywin32]
platform = "win32"
version = ">=303"

[tool.poetry.dependencies.wmi]
platform = "win32"
version = ">=1.5"

[tool.poetry.group.dev.dependencies]
mock = ">=5.0"
pytest = ">=8.3"
pytest-asyncio = ">=0.24"
pytest-cov = ">=5.0"
ruff = ">=0.7"
